--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Smart Bin SI - Dépendances Python
-# YOLO = YOLOv5 via torch.hub (pas de package ultralytics)
+# YOLO = YOLOv8 via ultralytics
 
 # Série (Arduino)
 pyserial>=3.5
@@ -13,6 +13,12 @@ opencv-python>=4.5.0
 # torch>=1.9.0
 # torchvision>=0.10.0
 
+# YOLO et apprentissage
+ultralytics>=8.0.0
+tqdm>=4.64.0
+
 # Optionnel
 matplotlib>=3.3.0
 pandas>=1.3.0
+requests>=2.28.0
+seaborn>=0.11.0
